--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "httpie": "^1.1.2"
+    "httpie": "^1.1.2",
+    "knex": "^2.5.1",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
