--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "httpie": "^1.1.2",
     "knex": "^2.5.1",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
