--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "httpie": "^1.1.2",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.5.1",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
